[package]
name = "async-ssh2"
version = "0.0.0"
authors = ["pbar1"]
license = "MIT/Apache-2.0"
keywords = ["ssh", "async"]
readme = "README.md"
repository = "https://github.com/pbar1/async-ssh2"
homepage = "https://github.com/pbar1/async-ssh2"
documentation = "https://docs.rs/async-ssh2"
description = "Async wrapper for ssh2"
edition = "2021"

[features]
vendored-openssl = ["ssh2/vendored-openssl"]

[dependencies]
ssh2 = "0.9.4"
libssh2-sys = "^0.3.0" # Must match version depended on by `ssh2`
async-io = "2"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.1"
tokio = { version = "1", features = ["full"] }
